[gd_scene load_steps=7 format=3 uid="uid://cwqabb6m5x8uy"]

[ext_resource type="PackedScene" uid="uid://blnj8wcojnaba" path="res://Scenes/menu_character.tscn" id="1_gvkbs"]
[ext_resource type="Script" path="res://Scenes/menu.gd" id="1_lpq6x"]
[ext_resource type="FontFile" uid="uid://dnw8xo3g538g7" path="res://Bebas_Neue/BebasNeue-Regular.ttf" id="2_7fe55"]
[ext_resource type="Texture2D" path="res://icon.svg" id="3_vaj13"]
[ext_resource type="Texture2D" path="res://PlayButton.png" id="3_wwnjq"]
[ext_resource type="Texture2D" uid="uid://rtkej0llprac" path="res://Sprites/ClaireSPSH2.png" id="5_3lut4"]

[node name="Menu" type="Control"]
layout_mode = 3
anchors_preset = 0
script = ExtResource("1_lpq6x")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.341176, 0.105882, 0.137255, 1)

[node name="CenterContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = 1647.0
offset_bottom = 532.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_top = 100

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="CenterContainer/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_shadow_color = Color(0.875074, 0, 0.110787, 1)
theme_override_colors/font_outline_color = Color(0.87451, 0, 0.109804, 1)
theme_override_constants/shadow_offset_x = 0
theme_override_constants/shadow_offset_y = 20
theme_override_constants/outline_size = 20
theme_override_constants/shadow_outline_size = 40
theme_override_fonts/font = ExtResource("2_7fe55")
theme_override_font_sizes/font_size = 250
text = "FRONTIER DIVISION 16"
horizontal_alignment = 1
vertical_alignment = 1

[node name="TextureRect" type="TextureRect" parent="CenterContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
texture = ExtResource("3_vaj13")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = 1124.0
offset_bottom = 1024.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 50
theme_override_constants/margin_right = 50

[node name="PlayButton" type="TextureButton" parent="MarginContainer"]
custom_minimum_size = Vector2(2.08165e-12, 2.08165e-12)
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 4
texture_normal = ExtResource("3_wwnjq")
texture_pressed = ExtResource("5_3lut4")
texture_hover = ExtResource("5_3lut4")
stretch_mode = 3
metadata/_edit_use_anchors_ = true

[node name="SettingsButton" type="TextureButton" parent="MarginContainer"]
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 4
texture_normal = ExtResource("3_wwnjq")
texture_hover = ExtResource("5_3lut4")
stretch_mode = 3
metadata/_edit_use_anchors_ = true

[node name="Menu_Character" parent="." instance=ExtResource("1_gvkbs")]
